--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "cle-allergy-aware",
   "version": "1.0.0",
   "scripts": {
-    "dev": "npx http-server public -p 8080 -o",
+    "dev": "next dev",
+    "dev:legacy": "npx http-server public -p 8080 -o",
     "dev:next": "next dev",
+    "build": "next build",
     "build:next": "next build",
+    "preview": "npx http-server out -p 8081 -o",
     "preview:next": "npx http-server out -p 8081 -o",
     "prisma:pull": "prisma db pull",
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
     "deploy": "node scripts/build-and-push-help-kb.mjs && bash scripts/deploy-vercel.sh",
-    "cap:copy": "npx cap copy",
-    "cap:sync": "npx cap sync",
+    "cap:copy": "npm run build && npx cap copy",
+    "cap:sync": "npm run build && npx cap sync",
     "cap:open:ios": "npx cap open ios"
   },
   "engines": {
