--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/public/$1" }
-  ]
+  "framework": "nextjs",
+  "buildCommand": "npm run build"
 }
