--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev:next": "next dev",
     "build": "next build",
     "build:next": "next build",
-    "preview": "npx http-server out -p 8081 -o",
-    "preview:next": "npx http-server out -p 8081 -o",
+    "preview": "next start -p 8081",
+    "preview:next": "next start -p 8081",
     "prisma:pull": "prisma db pull",
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
