--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "deploy": "node scripts/build-and-push-help-kb.mjs && bash scripts/deploy-vercel.sh",
     "cap:copy": "npm run build && npx cap copy",
     "cap:sync": "npm run build && npx cap sync",
-    "cap:open:ios": "npx cap open ios"
+    "cap:open:ios": "npx cap open ios",
+    "verify:next-transition": "node scripts/verify-next-transition.mjs"
   },
   "engines": {
     "node": "20.x"
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.0",
+    "@playwright/test": "^1.58.2",
     "http-server": "^14.1.1",
     "prisma": "^5.22.0",
     "typescript": "^5.9.3"
