Fix Next.js dish editor schema

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prisma:pull": "prisma db pull",
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
-    "deploy": "node scripts/build-and-push-help-kb.mjs && bash scripts/deploy-vercel.sh",
+    "deploy": "bash scripts/deploy-vercel.sh",
+    "deploy:with-kb": "node scripts/build-and-push-help-kb.mjs && bash scripts/deploy-vercel.sh",
     "cap:copy": "npm run build && npx cap copy",
     "cap:sync": "npm run build && npx cap sync",
     "cap:open:ios": "npx cap open ios",
