Implement anchor-bounded expansion

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cap:sync": "npm run build && npx cap sync",
     "cap:open:ios": "npx cap open ios",
     "verify:next-transition": "node scripts/verify-next-transition.mjs",
-    "verify:legacy-editor-parity": "node scripts/verify-legacy-editor-parity.mjs"
+    "verify:legacy-editor-parity": "node scripts/verify-legacy-editor-parity.mjs",
+    "capture:menu-overlay-fixtures": "node scripts/capture-menu-overlay-fixtures.mjs",
+    "verify:menu-overlay-parity": "node scripts/verify-menu-overlay-engine-parity.mjs"
   },
   "engines": {
     "node": "20.x"
