Clean up Clarivore database schema

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -5,13 +5,13 @@ enabled = true
 port = 54321
 
 [functions.dish-editor]
-verify_jwt = false
+verify_jwt = true
 
 [functions.analyze-ingredient-scan]
-verify_jwt = false
+verify_jwt = true
 
 [functions.spelling-corrector]
-verify_jwt = false
+verify_jwt = true
 
 [functions.monitor-menus]
-verify_jwt = false
+verify_jwt = true
