--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
   "framework": "nextjs",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "crons": [
+    {
+      "path": "/api/monitor-menus",
+      "schedule": "0 0 * * *"
+    }
+  ]
 }
