--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "verify:next-transition": "bash -lc 'set -a; [ -f .env ] && source .env; [ -f .env.local ] && source .env.local; set +a; node scripts/verify-next-transition.mjs'",
     "verify:legacy-editor-parity": "node scripts/verify-legacy-editor-parity.mjs",
     "capture:menu-overlay-fixtures": "node scripts/capture-menu-overlay-fixtures.mjs",
-    "verify:menu-overlay-parity": "node scripts/verify-menu-overlay-engine-parity.mjs"
+    "verify:menu-overlay-parity": "node scripts/verify-menu-overlay-engine-parity.mjs",
+    "axon:bootstrap": "bash scripts/axon-mcp/bootstrap.sh",
+    "axon:up": "bash scripts/axon-mcp/up.sh",
+    "axon:down": "bash scripts/axon-mcp/down.sh",
+    "axon:index": "bash scripts/axon-mcp/index-worktree.sh",
+    "axon:status": "bash scripts/axon-mcp/status.sh"
   },
   "engines": {
     "node": "20.x"
