--- a/scripts/axon-mcp/local.env.example
+++ b/scripts/axon-mcp/local.env.example
@@ -4,6 +4,7 @@ AXON_API_PORT=58080
 AXON_MCP_PORT=58001
 AXON_POSTGRES_PORT=55432
 AXON_REDIS_PORT=56379
+AXON_DISABLE_PORT_AUTOSELECT=1
 
 # Optional fallback pools when preferred port is busy:
 AXON_API_PORT_CANDIDATES="58080 59080 60080 61080"
