--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "verify:legacy-editor-parity": "node scripts/verify-legacy-editor-parity.mjs",
     "capture:menu-overlay-fixtures": "node scripts/capture-menu-overlay-fixtures.mjs",
     "verify:menu-overlay-parity": "node scripts/verify-menu-overlay-engine-parity.mjs",
+    "docs:lint": "markdownlint-cli2 \"docs/manager-user-guide.md\" \"docs/manager-flows/**/*.md\"",
+    "docs:flows:render": "node scripts/docs/render-manager-flow-diagrams.mjs",
+    "docs:flows:optimize": "node scripts/docs/optimize-manager-flow-diagrams.mjs",
+    "docs:flows:build": "npm run docs:flows:render && npm run docs:flows:optimize",
+    "docs:flows:capture": "node scripts/docs/capture-manager-flow-screenshots.mjs",
+    "docs:manager:pdf": "md-to-pdf docs/manager-user-guide.md",
     "axon:bootstrap": "bash scripts/axon-mcp/bootstrap.sh",
     "axon:up": "bash scripts/axon-mcp/up.sh",
     "axon:down": "bash scripts/axon-mcp/down.sh",
@@ -52,9 +58,13 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.0",
+    "@mermaid-js/mermaid-cli": "^11.12.0",
     "@playwright/test": "^1.58.2",
     "http-server": "^14.1.1",
+    "markdownlint-cli2": "^0.21.0",
+    "md-to-pdf": "^5.2.5",
     "prisma": "^5.22.0",
+    "svgo": "^4.0.0",
     "typescript": "^5.9.3"
   }
 }
