--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "verify:legacy-editor-parity": "node scripts/verify-legacy-editor-parity.mjs",
     "capture:menu-overlay-fixtures": "node scripts/capture-menu-overlay-fixtures.mjs",
     "verify:menu-overlay-parity": "node scripts/verify-menu-overlay-engine-parity.mjs",
+    "ml:export": "python3 scripts/ml/export_training_data.py",
+    "ml:fetch:off": "python3 scripts/ml/fetch_openfoodfacts_data.py",
+    "ml:train": "python3 scripts/ml/train_fast_model.py",
+    "ml:eval": "python3 scripts/ml/evaluate_model.py",
+    "ml:pipeline": "npm run ml:export && npm run ml:train && npm run ml:eval",
+    "ml:pipeline:online": "npm run ml:fetch:off && python3 scripts/ml/export_training_data.py --manual-labels scripts/ml/manual_hidden_alias_seed.jsonl --manual-labels ml/data/processed/openfoodfacts_examples.jsonl && npm run ml:train && npm run ml:eval",
     "docs:lint": "markdownlint-cli2 \"docs/manager-user-guide.md\" \"docs/manager-flows/**/*.md\"",
     "docs:flows:render": "node scripts/docs/render-manager-flow-diagrams.mjs",
     "docs:flows:optimize": "node scripts/docs/optimize-manager-flow-diagrams.mjs",
