--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "ml:fetch:off:targeted": "python3 scripts/ml/fetch_openfoodfacts_targeted.py --include-traces",
     "ml:fetch:usda": "python3 scripts/ml/fetch_usda_fdc_data.py",
     "ml:fetch:usda:bulk": "python3 scripts/ml/fetch_usda_fdc_bulk.py --require-contains",
+    "ml:prepare:usda-only": "python3 scripts/ml/prepare_usda_only_data.py",
     "ml:train": "python3 scripts/ml/train_fast_model.py",
     "ml:eval": "python3 scripts/ml/evaluate_model.py",
     "ml:eval:usda-holdout": "python3 scripts/ml/evaluate_model.py --dataset ml/data/processed/usda_fdc_bulk_holdout_examples.jsonl",
+    "ml:eval:usda-only-holdout": "python3 scripts/ml/evaluate_model.py --dataset ml/data/processed/usda_only_holdout.jsonl",
     "ml:tune-thresholds": "python3 scripts/ml/tune_thresholds.py",
     "ml:pipeline": "npm run ml:export && npm run ml:train && npm run ml:eval",
     "ml:pipeline:online": "npm run ml:fetch:off && npm run ml:fetch:off:targeted && npm run ml:fetch:usda && python3 scripts/ml/export_training_data.py --manual-labels scripts/ml/manual_hidden_alias_seed.jsonl --manual-labels ml/data/processed/openfoodfacts_examples.jsonl --manual-labels ml/data/processed/openfoodfacts_targeted_examples.jsonl --manual-labels ml/data/processed/usda_fdc_examples.jsonl && npm run ml:train && npm run ml:eval && npm run ml:tune-thresholds",
     "ml:pipeline:online:bulk": "npm run ml:fetch:off:targeted && npm run ml:fetch:usda:bulk && python3 scripts/ml/export_training_data.py --manual-labels scripts/ml/manual_hidden_alias_seed.jsonl --manual-labels ml/data/processed/openfoodfacts_targeted_examples.jsonl --manual-labels ml/data/processed/usda_fdc_bulk_train_examples.jsonl && npm run ml:train && npm run ml:eval && npm run ml:tune-thresholds",
+    "ml:pipeline:usda-only": "npm run ml:fetch:usda:bulk && npm run ml:prepare:usda-only && python3 scripts/ml/train_fast_model.py --train-file ml/data/processed/usda_only_train.jsonl --val-file ml/data/processed/usda_only_val.jsonl --label-space-file ml/data/processed/label_space_usda_only.json && npm run ml:tune-thresholds && npm run ml:eval:usda-only-holdout",
     "docs:lint": "markdownlint-cli2 \"docs/manager-user-guide.md\" \"docs/manager-flows/**/*.md\"",
     "docs:flows:render": "node scripts/docs/render-manager-flow-diagrams.mjs",
     "docs:flows:optimize": "node scripts/docs/optimize-manager-flow-diagrams.mjs",
