--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ scripts/axon-mcp/local.env
 .cursor/mcp.json
 ml/artifacts/
 ml/data/raw/
+ml/data/processed/*.jsonl
+ml/data/processed/*_summary.json
 ml/data/processed/all_examples.jsonl
 ml/data/processed/train.jsonl
 ml/data/processed/val.jsonl
